--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Simple Website</title>
+    <link rel="stylesheet" href="styles/blog.css">
 </head>
 <body>
-    
+    <div>
+        <h3>My first website</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis corrupti repellendus eius, ipsum beatae nobis iste a, voluptatum dicta non repudiandae consectetur sequi. Sequi deleniti quo voluptates, tenetur facilis ratione.</p>
+    </div>
 </body>
 </html>
