added a list to push code

--- a/index.html
+++ b/index.html
@@ -8,8 +8,24 @@
 </head>
 <body>
     <div>
-        <h3>My first website</h3>
+        <h3>My First Blog</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis corrupti repellendus eius, ipsum beatae nobis iste a, voluptatum dicta non repudiandae consectetur sequi. Sequi deleniti quo voluptates, tenetur facilis ratione.</p>
+    </div>
+    <div>
+        <h3>My Second Blog</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis corrupti repellendus eius, ipsum beatae nobis iste a, voluptatum dicta non repudiandae consectetur sequi. Sequi deleniti quo voluptates, tenetur facilis ratione.</p>
+    </div>
+    <div>
+        <h3>My Third Blog</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis corrupti repellendus eius, ipsum beatae nobis iste a, voluptatum dicta non repudiandae consectetur sequi. Sequi deleniti quo voluptates, tenetur facilis ratione.</p>
+    </div>
+    <div>
+        <h3><i>How to push incremental code</i></h3>
+        <ul>
+            <li>git add .</li>
+            <li>git commit -m"add a meaningful comment message"</li>
+            <li>git push</li>
+        </ul>
     </div>
 </body>
 </html>
