--- a/index.html
+++ b/index.html
@@ -27,5 +27,9 @@
             <li>git push</li>
         </ul>
     </div>
+    <div>
+        <h2 style="color: red;">I love to travel different places</h2>
+        <img src="images/bandarban.jpeg" alt="">
+    </div>
 </body>
 </html>
